# inferbench

./: go.mod
analysis/: README.md  pyproject.toml
analysis/src/inferbench_analysis/: __init__.py  cli.py  contracts.py  cost.py  errors.py  events.py  goodput.py  knee.py  percentiles.py  report.py  result.py  warmup.py
analysis/tests/: conftest.py  test_bootstrap.py  test_cost.py  test_gating.py  test_goodput.py  test_knee.py  test_loader.py  test_percentiles.py  test_pooling_guard.py  test_report.py  test_result.py  test_warmup.py
cmd/inferbench/: common.go  common_test.go  compare.go  experiment.go  main.go  replay.go  run.go  sweep.go
docs/: architecture.md  charter.md  experiments.md  implementation-notes.md  integration.md  interfaces.md  milestones.md  non-goals.md  observability.md  oss-opportunities.md  risks.md  scope.md  security.md  tasks.md  testing.md
docs/adr/: ADR-0001-open-loop-scheduler.md  ADR-0002-statistics-choices.md  ADR-0003-closed-loop-flagging.md  ADR-0004-tool-calibration-protocol.md  README.md
docs/evidence/ib-t004/: calibration.md  infergate-pin.txt
docs/evidence/ib-t005/: mock-loopback.slo.json
docs/evidence/ib-t006/: ib-t005-calib-A.report.md  ib-t006-calib-A.report.md  ib-t006-cancel-queued.report.md
docs/evidence/ib-t007/: calibration-reference.md  compare_calibration.py  comparison-summary.json  inferbench-facts.json  inferbench-workload.json  llama-bench.json  quiet-box.txt  refclient-pinned.json  refclient-shared.json  (+1 more)
hypotheses/: EXP-ib-t009-gateway-overhead-demo.json  EXP-ib-t010-e1-gateway-overhead.json  EXP-ib-t010-e2-admission-value.json  EXP-ib-t010-e2b-queue-cap.json  README.md  TEMPLATE.json
internal/client/: client.go  client_test.go  sse.go
internal/events/: event.go  events_test.go  recorder.go
internal/experiment/: experiment.go  experiment_test.go
internal/manifest/: manifest.go  manifest_test.go
internal/replay/: replay.go  replay_test.go
internal/run/: run.go  run_test.go
internal/schedule/: schedule.go  schedule_test.go
internal/structdiff/: structdiff.go  structdiff_test.go
internal/sweep/: sweep.go  sweep_test.go
internal/workload/: distribution.go  prompt.go  suite_test.go  workload.go  workload_test.go
scripts/: analyze-evidence.sh  calibrate-llamacpp-reference.sh  calibrate-mock.sh  dryrun-workloads.sh  eventstats.py  experiment-demo.sh  ib-t010-e1-llamacpp.sh  ib-t010-e2-admission-value.sh  ib-t010-e2b-queue-cap.sh  ib-t010-kit-validate.sh  report-evidence.sh  sweep-mock.sh
testdata/live/: gateway-mock.manifest.json  ib-t003-dryrun.manifest.json  ib-t004-pair.manifest.json  mock-smoke.workload.json
workloads/: README.md  bursty.json  cancel-storm.json  chat-short.json  gen-long-out.json  mixed.json  rag-long-in.json  shared-prefix.json  slow-client.json
(+284 files in other folders)
